--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,16 +26,17 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "tm.com.gyzyleller"
-    compileSdkVersion localProperties.getProperty('flutter.compileSdkVersion').toInteger()
+        compileSdk = 35
+    ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
+
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -49,11 +50,10 @@ android {
 
     defaultConfig {
         applicationId "tm.com.gyzyleller"
-        minSdkVersion localProperties.getProperty('flutter.minSdkVersion').toInteger()
-        targetSdkVersion localProperties.getProperty('flutter.targetSdkVersion').toInteger()
-        versionCode localProperties.getProperty('flutter.versionCode').toInteger()
-        versionName localProperties.getProperty('flutter.versionName')
-        multiDexEnabled true
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
     }
 
     buildTypes {
@@ -68,9 +68,8 @@ flutter {
 }
 
 dependencies {
-    implementation "androidx.multidex:multidex:2.0.1" 
+ implementation "androidx.multidex:multidex:2.0.1" 
     implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.google.firebase:firebase-messaging'
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.5"
-
 }
